correct counter alignment

--- a/frontend/src/components/Quantity.css
+++ b/frontend/src/components/Quantity.css
@@ -16,6 +16,5 @@
     border-radius: 3px;
     text-decoration: none;
     margin-left: .5rem;
-    margin-right: .5rem;
     text-align: center;
 }
